# arcana-astral

./: README.md  package-lock.json  package.json
arcana-astral/frontend/: package-lock.json
arcana-astral/frontend/src/: App.vue
arcana-astral/frontend/src/components/: CxContactForm.vue  CxFooter.vue  CxHeader.vue  CxHero.vue  CxServices.vue  CxTestimonials.vue
arcana-astral/frontend/src/views/: VxHome.vue
e-commerce/: .gitignore  README.md  pyproject.toml
e-commerce/adapters/api/routers/controllers/: cart_controller.py  category_controller.py  order_controller.py  product_controller.py  user_controller.py
e-commerce/adapters/api/routers/presenters/: cart_presenter.py  category_presenter.py  order_presenter.py  product_presenter.py  user_presenter.py
e-commerce/adapters/api/schemas/: user.py
e-commerce/adapters/db/models/: cart.py  category.py  order.py  product.py  user.py
e-commerce/adapters/db/repositories/db/: database.py
src/: App.vue
src/components/: CxContactForm.vue  CxFooter.vue  CxHeader.vue  CxHero.vue  CxServices.vue  CxTestimonials.vue
src/views/: VxHome.vue
