[tool.poetry]
name = "e-commerce"
version = "0.1.0"
description = ""
authors = ["perezcatriel <perezcatriel@gmail.com>"]
readme = "README.md"
packages = [{include = "e_commerce"}]

[tool.poetry.dependencies]
python = "^3.11"
python-jose = "^3.3.0"
passlib = "^1.7.4"
jwt = "^1.3.1"
sqlalchemy = "^2.0.22"
fastapi = "^0.103.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
